# rayTracer

./: CMakeLists.txt
src/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  Color.hpp  Material.hpp  OBJLoader.cpp  OBJLoader.hpp  Object.cpp  Object.hpp  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  main.cpp
src/ds/: Grid.hpp  Grid.ipp  GridCellIterator.hpp  GridCellIterator.ipp
src/light/: AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.hpp  PointLight.cpp  PointLight.hpp  primitives.hpp
src/object/: BareTriangle.cpp  BareTriangle.hpp  Mesh.cpp  Mesh.hpp  OBJLoader.cpp  OBJLoader.hpp  Object.cpp  Object.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  primitives.hpp
